test/library/standard/Memory/Initialization/moveInitBad.good
moveInitBad.chpl:10: error: type mismatch move-initializing an expression of type 'nothing' from one of type 'int(64)'
moveInitBad.chpl:11: error: type mismatch move-initializing an expression of type '[domain(1,int(64),false)] real(64)' from one of type 'int(64)'
moveInitBad.chpl:12: error: type mismatch move-initializing an expression of type 'domain(1,int(64),false)' from one of type 'int(64)'
moveInitBad.chpl:13: error: type mismatch move-initializing an expression of type 'DefaultDist' from one of type 'int(64)'
moveInitBad.chpl:14: error: type mismatch move-initializing an expression of type 'int(64)' from one of type 'real(64)'
